--- a/public/css/pages/my-plant-info.css
+++ b/public/css/pages/my-plant-info.css
@@ -69,7 +69,7 @@
 .tile-img{
     width: 100%;
 }
-#btn_remove_plant{
+#btn-remove-plant{
     width: 100%;
     padding: 15px;
     border-radius: 20px;
