--- a/public/css/pages/my-plant-info.css
+++ b/public/css/pages/my-plant-info.css
@@ -74,3 +74,38 @@
     padding: 15px;
     border-radius: 20px;
 }
+
+#btn_show_devices{
+    padding: 10px 15px;
+    border-radius: 20px;
+
+}
+
+.plant-param-container{
+    border-radius: 20px;
+    padding: 10px 15px;
+    border: 1px solid #b8b8b8;
+    box-shadow: 1px 1px 1px #b8b8b8;
+}
+
+#spinnerBackground{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background-color: #fff;
+    justify-content: center;
+}
+#spinnerBackground img{
+    position: absolute;
+    top: 50%; left: 50%;
+    transform: translate(-50%,-50%);
+    width: 200px;
+    height: 200px;
+}
+#spinnerBackground h4{
+    position: absolute;
+    top: 60%;
+    width: 100%;
+}
